fix: add link on readme and fix overflow on small devices

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
 }
 
 header {
@@ -61,7 +61,7 @@ main {
 }
 
 .podcast-image {
-  max-width: 100%;
+  max-width: 70%;
   border-radius: 0.625rem;
   margin-bottom: 1.25rem;
 }
@@ -80,7 +80,7 @@ audio {
 .language-switch {
   display: flex;
   gap: 10px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 
 .language-switch button {
@@ -99,7 +99,7 @@ p {
 
 footer {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   gap: 25px;
   align-items: center;
   justify-content: center;
@@ -136,6 +136,16 @@ a img {
 @media (max-width: 639px) {
   main {
     padding: 1rem;
+  }
+
+  header h1 {
+    display: flex;
+    align-items: center;
+  }
+
+  header h1 {
+    font-size: 1.5rem;
+    text-align: center;
   }
 
   .podcast-info {
